--- a/src/html/header.html
+++ b/src/html/header.html
@@ -33,7 +33,33 @@
                                 </ul>
                             </nav> 
                         </div>
-                        <div class="menu__decor">
+                        <div class="menu__decor ">
+                            <div class="decor-line decor-line_1">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1440" height="233" viewBox="0 0 1440 233" fill="none">
+                                    <path d="M0 175.235C116.668 214.509 305.231 256.347 443.346 214.783C651.274 152.21 827.213 -49.9822 1133.61 13.0165C1256.25 38.2344 1360.07 83.1894 1440 129.122" stroke="#590D56"/>
+                                </svg>
+                               
+                            </div>
+                            <div class="decor-line decor-line_2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1440" height="47" viewBox="0 0 1440 47" fill="none">
+                                    <path d="M0 12.0582C116.668 4.40727 305.231 -3.74284 443.346 4.35402C651.274 16.5436 827.213 55.9316 1133.61 43.6591C1256.25 38.7465 1360.07 29.9891 1440 21.0412" stroke="#590D56"/>
+                                </svg>
+                            </div>
+                            <div class="decor-line decor-line_3">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1440" height="126" viewBox="0 0 1440 126" fill="none">
+                                    <path d="M0 94.5286C116.668 115.611 305.231 138.069 443.346 115.758C651.274 82.1688 827.213 -26.3671 1133.61 7.45043C1256.25 20.9873 1360.07 45.119 1440 69.7754" stroke="#590D56"/>
+                                </svg>
+                            </div>
+                            <div class="decor-line decor-line_4">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1440" height="158" viewBox="0 0 1440 158" fill="none">
+                                    <path d="M0 39.335C116.668 12.8119 305.231 -15.4418 443.346 12.6273C651.274 54.8844 827.213 191.43 1133.61 148.885C1256.25 131.855 1360.07 101.495 1440 70.4761" stroke="#590D56"/>
+                                    </svg>
+                            </div>
+                            <div class="decor-line decor-line_5">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1440" height="70" viewBox="0 0 1440 70" fill="none">
+                                    <path d="M0 52.2899C116.668 63.8512 305.231 76.167 443.346 63.9317C651.274 45.5119 827.213 -14.0077 1133.61 4.53733C1256.25 11.9608 1360.07 25.1943 1440 38.7155" stroke="#590D56"/>
+                                    </svg>
+                            </div>
                        </div>                                          
                     </div>
                 </div>
